syntax = "proto2";

package amarlon;

message ItemTypeData {
  optional int32 category       = 1;
  optional int32 amunition_type = 2;
  optional int32 armor_type     = 3;
  optional int32 weapon_type    = 4;
}